--- a/jmeter-no-reporting.properties
+++ b/jmeter-no-reporting.properties
@@ -427,7 +427,7 @@ jmeter.save.saveservice.print_field_names=false
 
 # Optional list of JMeter variable names whose values are to be saved in the result data files.
 # Use commas to separate the names. For example:
-sample_variables=traceId
+#sample_variables=traceId
 # N.B. The current implementation saves the values in XML as attributes,
 # so the names must be valid XML names.
 # Versions of JMeter after 2.3.2 send the variable to all servers
