--- a/jmeter.properties
+++ b/jmeter.properties
@@ -824,6 +824,11 @@ httpsampler.ignore_failed_embedded_resources=true
 # (to disable searching, set the value less than or equal to the .port property)
 #jmeterengine.nongui.maxport=4455
 
+
+#force jmeter to quit after test finishes
+jmeterengine.force.system.exit=true
+
+
 # How often to check for shutdown during ramp-up (milliseconds)
 #jmeterthread.rampup.granularity=1000
 
